--- a/bower.json
+++ b/bower.json
@@ -27,9 +27,7 @@
     "angular-mocks": "~1.4.0",
     "html5-boilerplate": "~5.2.0",
     "angular-google-maps": "^2.3.2",
-    "angular-sanitize": "^1.5.3"
-  },
-  "resolutions": {
-    "angular": "1.5.3"
+    "angular-sanitize": "~1.4.0",
+    "angular-scroll-glue": "^2.0.6"
   }
 }
